--- a/angular.json
+++ b/angular.json
@@ -123,5 +123,12 @@
       }
     }
   },
+  "serve": {
+    "builder": "@angular-devkit/build-angular:dev-server",
+    "options": {
+      "browserTarget": "move-safe:build",
+      "proxyConfig": "src/proxy.conf.json"
+    }
+  },
   "defaultProject": "myApp"
 }
